deployments.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: k8-e2e
  labels:
    app: k8-e2e
spec:
  containers:
    - image: cptlemming/k8-e2e-master:1.0.0
      name: k8-e2e
      ports:
        - containerPort: 4000
          hostPort: 4000
---
kind: Service
apiVersion: v1
metadata:
  name: k8-e2e-service
spec:
  selector:
    app: k8-e2e
  type: NodePort
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Pod
metadata:
  name: k8-app-1
  labels:
    app: k8-app-1
spec:
  containers:
    - image: cptlemming/k8-ui:1.0.3
      name: k8-ui-1
      ports:
        - containerPort: 80
          hostPort: 3000
    - image: cptlemming/k8-api:1.1.0
      name: k8-api-1
      ports:
        - containerPort: 3500
          hostPort: 3500
    - image: cptlemming/k8-db:1.0.0
      name: k8-db-1
      ports:
        - containerPort: 5000
    - image: cptlemming/k8-e2e-node:1.0.1
      name: k8-e2e-1
---
kind: Service
apiVersion: v1
metadata:
  name: k8-service-1
spec:
  selector:
    app: k8-app-1
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8-app-2
spec:
  replicas: 2
  minReadySeconds: 15
  strategy:
    type: RollingUpdate
    rollingUpdate: 
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: k8-app-2
    spec:
      containers:
        - image: cptlemming/k8-ui:1.0.4
          name: k8-ui-2
          ports:
            - containerPort: 80
        - image: cptlemming/k8-api:1.1.0
          name: k8-api-2
          ports:
            - containerPort: 3500
        - image: cptlemming/k8-db:2.0.0
          name: k8-db-2
          ports:
            - containerPort: 5000
        - image: cptlemming/k8-e2e-node:1.0.1
          name: k8-e2e-2
---
kind: Service
apiVersion: v1
metadata:
  name: k8-service-2
spec:
  selector:
    app: k8-app-2
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: k8-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app1.k8-demo.com
      http:
        paths:
        - path: /(.*)
          backend:
            serviceName: k8-service-1
            servicePort: 80
    - host: app2.k8-demo.com
      http:
        paths:
        - path: /(.*)
          backend:
            serviceName: k8-service-2
            servicePort: 80
